# TigersClav

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  README.md  formatter.xml
.github/workflows/: build.yml
cmake/: git_version.cmake
launch/: TigersClav Debug.launch  TigersClav Release.launch
src/: Application.cpp  Application.hpp  FieldVisualizer.cpp  IGameLogSource.hpp  IMediaSource.hpp  ImageComposer.cpp  ImageComposer.hpp  LogViewer.cpp  LogViewer.hpp  Project.hpp  SSLGameLog.cpp  SSLGameLog.hpp  TigersClav.cpp  TigersClav.hpp  Video.cpp  Video.hpp  git_version.h  main.cpp
src/data/: AVWrapper.hpp  MediaEncoder.cpp  MediaEncoder.hpp  MediaFrame.hpp  MediaSource.cpp  MediaSource.hpp  SSLGameLog.cpp  SSLGameLog.hpp  Video.cpp  Video.hpp
src/gui/: AScoreBoard.cpp  AScoreBoard.hpp  FancyScoreBoard.cpp  FancyScoreBoard.hpp  FieldVisualizer.cpp  FieldVisualizer.hpp  ImageComposer.cpp  ImageComposer.hpp  ProgrammerScoreBoard.cpp  ProgrammerScoreBoard.hpp  ScoreBoard.cpp  ScoreBoard.hpp  ScoreBoardFactory.cpp  ScoreBoardFactory.hpp
src/model/: Camera.cpp  Camera.hpp  Director.cpp  Director.hpp  GameLog.cpp  GameLog.hpp  Project.cpp  Project.hpp  RefereeStateChange.hpp  SyncMarker.hpp  VideoProducer.cpp  VideoProducer.hpp
src/shaders/: imgui.fs  imgui.vs  simple.fs  simple.vs  video_grey.fs  yuv_to_grey.fs  yuv_to_rgb.fs
src/util/: CustomFont.cpp  CustomFont.h  CustomImGuiFileDialogConfig.h  ShaderProgram.cpp  ShaderProgram.hpp
